--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   provider: ^6.1.2
   confetti: ^0.7.0
   intl: ^0.19.0
+  supabase_flutter: ^2.5.6
 
 dev_dependencies:
   flutter_test:
