--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   supabase_flutter: ^2.5.6
   sign_in_with_apple: ^6.1.1
   crypto: ^3.0.3
+  permission_handler: ^11.3.1
 
 dev_dependencies:
   flutter_test:
