--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   sign_in_with_apple: ^6.1.1
   crypto: ^3.0.3
   permission_handler: ^11.3.1
+  speech_to_text: ^6.6.0
 
 dev_dependencies:
   flutter_test:
