--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,13 +41,17 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   provider: ^6.1.2
-  confetti: ^0.7.0
-  intl: ^0.19.0
+  confetti: ^0.8.0
+  intl: ^0.20.2
   supabase_flutter: ^2.5.6
-  sign_in_with_apple: ^6.1.1
+  sign_in_with_apple: ^7.0.1
   crypto: ^3.0.3
-  permission_handler: ^11.3.1
-  speech_to_text: ^6.6.0
+  permission_handler: ^12.0.1
+  speech_to_text: ^7.3.0
+  record: ^6.0.0
+  path_provider: ^2.1.3
+  path: ^1.9.0
+  http: ^1.2.1
 
 dev_dependencies:
   flutter_test:
@@ -58,8 +62,8 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^5.0.0
-  flutter_launcher_icons: ^0.13.1
+  flutter_lints: ^6.0.0
+  flutter_launcher_icons: ^0.14.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
