--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   path_provider: ^2.1.3
   path: ^1.9.0
   http: ^1.2.1
+  purchases_flutter: any
 
 dev_dependencies:
   flutter_test:
