added the audio wave playback

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   purchases_flutter: any
   flutter_local_notifications: ^17.2.2
   timezone: ^0.9.4
+  audioplayers: ^5.2.1
 
 dev_dependencies:
   flutter_test:
