--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   flutter_local_notifications: ^17.2.2
   timezone: ^0.9.4
   audioplayers: ^5.2.1
+  google_fonts: ^6.1.0
 
 dev_dependencies:
   flutter_test:
