--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   audioplayers: ^5.2.1
   google_fonts: ^6.1.0
   wakelock_plus: ^1.2.5
+  in_app_review: ^2.0.9
 
 dev_dependencies:
   flutter_test:
