--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   google_fonts: ^6.1.0
   wakelock_plus: ^1.2.5
   in_app_review: ^2.0.9
+  url_launcher: ^6.3.0
 
 dev_dependencies:
   flutter_test:
