--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -89,6 +89,7 @@ flutter:
   assets:
     - assets/superthinking_profile.png
     - assets/lottie/
+    - assets/avatars/social_proof/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
