--- a/ios/Podfile
+++ b/ios/Podfile
@@ -30,6 +30,9 @@ flutter_ios_podfile_setup
 target 'Runner' do
   use_frameworks!
 
+  # TikTok App Events SDK
+  pod 'TikTokBusinessSDK', '~> 1.5.0'
+
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
   target 'RunnerTests' do
     inherit! :search_paths
@@ -43,6 +46,8 @@ post_install do |installer|
       config.build_settings['GCC_PREPROCESSOR_DEFINITIONS'] ||= ['$(inherited)',
         'PERMISSION_NOTIFICATIONS=1'
       ]
+      # Other Linker Flags required by TikTok SDK
+      config.build_settings['OTHER_LDFLAGS'] ||= ['$(inherited)', '-ObjC', '-lc++']
     end
   end
 end
